--- a/index.html
+++ b/index.html
@@ -6,12 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
+    <form>
+        <label>
+            名字：
+            <input type="text" placeholder="輸入你的名字">
+        </label>
+
+        <label>
+            留言：
+            <textarea placeholder="請輸入留言..."></textarea>
+        </label>
+
+        <button type="submit">送出</button>
+        <button type="button" disabled>禁用按鈕</button>
+    </form>
+    <form>
+        <input type="text" placeholder="輸入你的名字">
+        <textarea placeholder="留言"></textarea>
+        <button type="submit">送出</button>
+    </form>
+    <form action="">
+        <label for="username">帳號：</label>
+        <input id="username" name="username" type="text">
+    </form>
     <h2>我是神的子民</h2>
-    <p>萬軍聽我號令</p>
+    <p class="god">萬軍聽我號令<a href="https://shadowverse-wins.com/">尋章摘句 皓首窮經</a></p>
     <button type="button">我的喵喵</button>
+    <img src="https://shadowverse-wins.com/common/img/mv.png" alt="">shadowverse
+    <p>價格<s>2500</s><ins style="color: brown;">300</ins>元</p>
+    <a href="#">人爭一口氣 佛爭一炷香</a>
+    <p class="p1">母弱出商賈，男強作侍郎。族望留原籍，家貧走他鄉。</p>
+    <div class="cardbox">
+        <div class="card"><img class="avatar"
+                src="https://i.pinimg.com/736x/c3/3e/15/c33e15f960cf2ae4bc32dd86cc0a7dce.jpg" alt=""></div>
+        <div class="card">
+            <p>男兒當自強</p>
+        </div>
+        <div class="card">
+            <p>王侯將相 寧有種乎</p>
+        </div>
+        <div class="card"><img class="img"
+                src="https://cdn.pixabay.com/photo/2025/08/11/07/18/nurturing-swan-9767495_1280.jpg"></div>
+    </div>
+    <div class="scroller">
+        <div class="slide">Item A</div>
+        <div class="slide">Item B 很長很長很長的文字</div>
+        <div class="slide">Item C</div>
+        <div class="slide">Item A</div>
+        <div class="slide">Item B 很長很長很長的文字</div>
+        <div class="slide">Item C</div>
+        <div class="slide">Item A</div>
+        <div class="slide">Item B 很長很長很長的文字</div>
+        <div class="slide">Item C</div>
+        <div class="slide">Item A</div>
+        <div class="slide">Item B 很長很長很長的文字</div>
+        <div class="slide">Item C</div>
+    </div>
+    <div class="avatar">
+    </div>
+    <div class="banner">
+        <img src="https://i.pinimg.com/1200x/eb/72/66/eb72664e508762140327c1a0430f6c97.jpg" alt="">
+    </div>
 </body>
 
 </html>
