修改pd-list sidebar寬度 237px

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <div class="banner">
         <img src="https://i.pinimg.com/1200x/eb/72/66/eb72664e508762140327c1a0430f6c97.jpg" alt="">
     </div>
+    <script src="all.js"></script>
 </body>
 
 </html>
